--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: textgram
-description: "A new Flutter project."
+description: "Mini tg-client."
 publish_to: 'none'
 version: 0.0.4
 
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   ffi: 2.1.4
   provider: ^6.1.1
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
